Chorus fruit now smelts into a small amount of resonant ender
Added immersive petrol diesel to advanced gen fuel list
Added a trophy
Adding missing ores to mining lens (dark ore, wolframite, iridium, chaos) and rebalanced nickel 
Nerfed carbon values for wood dust/pulp & TE bitumen. Added carbon value for IE bitumen
Redid loottables for end chest
Added lore for final tech and magic chapters
Mods Added:
 * PackMode (Peaceful players can load extra recipes for mob drops with /packmode peaceful) 

2.7.1
---------- 
Fixed bqm starting in edit mode
Fixed recipe conflict making tough fabric uncraftable 


2.7.0
----------
Reduced overall number of DE cores needed (still adjusting DE balance)
Added recipe for mass producing florescent dye after wyvern fusion
Added alt fusion recipe for crystal chaos essence
Changed a few default keys for less conflicts
Magneticraft thermopile is craftable again
Added some helpful tool tips on GM chicken feed / mob swabs
Reduced dupe processing loop with iridium
Changed block of manasteel to use steel
Added calc diamonds to mana diamond recipe
Made redstone relay for TE pipes cheaper
Changed the plate used in pulverizer recipe because one player hated the crushing table
Adjusted new IE insulated wire recipes a bit
Added quests for metamorphic stone and deep dark
Added quests for lost city dim
Added rewards to farming chapter
Added lore to advanced infrastructure chapter
More fiddling with quest book (some new quest, some new descriptions, some new rewards)
Added little things to LC and deep dark world gen
Removed custom recipe for AS lens due to lack of nbt support
Added an alt recipe for end crystal
Dropped singularities input down to 2k 
Various forgotten recipe tweaks
Added butterfly poison
Added ore injection tool to replace ore + bottle recipes
Fixed custom lost city buildings/gardens not spawning
Renamed magneticraft dusts so its more clear they can't be used for crafting

Mod Updates:
* Forge 14.23.2.2611
* Actually Additions