@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Thu Mar 15 00:53:04 EDT 2018
+#Thu Mar 15 18:37:49 EDT 2018
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
