@@ -363,14 +363,9 @@ world1284581664 {
 
 
 world1284592268 {
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
     S:filterText=creative
-
-    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
@@ -520,9 +515,14 @@ world2121100161 {
 
 
 world2177 {
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
+
+    # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=scrap
+    S:filterText=empowered
+
+    # Show the list of items next to open guis.
     B:overlayEnabled=true
 }
 
