@@ -1,5 +1,5 @@
 #Splash screen properties
-#Thu Mar 15 00:50:27 EDT 2018
+#Thu Mar 15 18:35:26 EDT 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
