@@ -347,3 +347,4 @@ game.setLocalization("en_us", "item.magneticraft.dusts_nickel.name", "Nickel Con
 <ore:astralCrystal>.add(<astralsorcery:itemcelestialcrystal>);
 <ore:bitumen>.add(<immersivepetroleum:material>);
 <ore:bitumen>.add(<thermalfoundation:material:892>);
+<ore:lavaRing>.add(<randomthings:lavacharm>);
